<resources>
    <string name="app_name">Activities and Layout</string>
    <string name="batman">Batman</string>
    <string name="IronMan">Ironman</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email</string>
    <string name="concern">Concern</string>
    <string name="phone_no">Phone No</string>
</resources>